# agent

./: .env.example  .gitignore  Makefile  README.md  go.mod  main.go
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
adk-go/: Makefile  README.md  go.mod  go.sum  main.go
docs/: agent-taxonomy.md  architecture-and-eval-gap.md  cross-modality-gap.md  four-tradeoffs-gap-analysis.md  gui-voice-video-gap.md  hitl-rollout-kpi-gap.md  lifecycle-hitl-gap.md  llmops-gap-analysis.md  tool-design-audit.md  ux-modality-gap.md
genkit/: app.go  demo.go  rag.go  server.go
genkit-go/: go.mod  go.sum  main.go
genkit-go/genkit/: README.md  types.go  vectorstore.go
go/: Makefile  README.md  go.mod  go.sum
go/knowledge/: agent-flow-patterns-2026.md  agent-frameworks-comparison-2026.md  agent-scope-setting.md  agent-system-design-principles.md  audience-split-services.md  coding-agent-design-patterns.md  connectrpc-streaming-flow.md  (+3 more)
mastra/: .env.example  .gitignore  README.md  package.json  tsconfig.json
python/: .gitignore  README.md  pyproject.toml
python/constrained_decoding/: README.md  demo.py  grammar.py  processors.py  pyproject.toml
python/langchain/: .env.example  .gitignore  README.md  pyproject.toml
python/langchain/agents/: README.md
python/langchain/agents/a2a/: __init__.py  card.py  client.py  errors.py  server.py  summarizer.py  transport.py
python/langchain/agents/doc_reader/: __init__.py  prompt.py
python/langchain/agents/experience/: __init__.py  distill.py  fake.py  prompt.py  rule.py
python/langchain/agents/helpdesk/: __init__.py  connectors.py  fake.py  graph.py  prompt.py  runner.py  tools.py
python/langchain/agents/mcp_client/: prompt.py  runner.py  semantic.py
python/langchain/agents/memory/: __init__.py  fake.py  graph.py  graphrag.py  rag_pipeline.py  retrieval.py
python/langchain/agents/reflection/: __init__.py  fake.py  graph.py  prompt.py  runner.py
python/langchain/agents/reflexion/: __init__.py  actor.py  loop.py  memory.py  prompt.py  task.py
python/langchain/agents/search_agent/: __init__.py  prompt.py  runner.py
python/langchain/agents/supervisor/: __init__.py  fake.py  graph.py  prompt.py  runner.py  tools.py
python/langchain/agents/tool_selection/: __init__.py  catalog.py  embed.py  hierarchical.py  llm.py  native.py  semantic.py
python/langchain/agents/web_researcher/: __init__.py  feedback.py  prompt.py  runner.py
python/langchain/cli/: README.md  agent.py  llm_chain_example.py  retriever.py  vector_store.py
python/langchain/cli/tools/: __init__.py  search_documents.py  web_search.py  write_file.py
python/langchain/core/: types.py
python/langchain/core/providers/: __init__.py  embeddings.py  factory.py
python/pydantic_ai/: .env.example  README.md  pyproject.toml
python/pydantic_ai/agents/inventory/: __init__.py  agent.py  fake.py  runner.py
python/pydantic_ai/tests/: test_inventory.py
python/transformer_training/: .gitignore  Makefile  README.md  bpe.py  data.py  decoding_demo.py  encode_to_bin.py  eval_tokenizer.py  generate.py  model.py  pyproject.toml  seq2seq.py  seq2seq_train.py  soft_dictionary_demo.py  temperature_demo.py  train.py  word_bpe_demo.py
ts/: .env.example  .gitignore  README.md  package.json  tsconfig.json
(+101 files in other folders)
