[project]
name = "agent-constrained-decoding"
version = "0.0.1"
description = "制約付きデコーディング（logits masking）の最小実装デモ。Outlines / llama.cpp grammar / vLLM guided decoding の核を numpy だけで再現する"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
