[project]
name = "agent-python"
version = "0.0.1"
description = "LangChain / LangGraph 流の reference 実装"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
