[project]
name = "agent-pydantic-ai"
version = "0.0.1"
description = "PydanticAI 流の reference 実装（LangChain トラックと同じ抽象を別フレームワークで）"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai]>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
